fixed footer spacing for ie

--- a/hydramedia/css/1140.css
+++ b/hydramedia/css/1140.css
@@ -95,34 +95,59 @@ img {
 	body {
 	font-size: 8pt;
 	}
+	
+	
+	.row .onecol {
+	width: 10%;
 	}
+	.row .ninecol {
+	width: 70%;
+	}
+	.row .twocol {
+	width: 15%;
+	}
+
+	input.signupinput {
+	font-size:16pt;
+	}
+
+	.row .boxcol {
+	width: 2%;
+	}
+	
+	.signup {
+	margin-left:10px;
+	}
+
+}
+
+@media only screen and (max-width: 900px) {
+
+	body {
+	font-size: 8pt;
+	}
+	
+	
+	.row .onecol {
+	width: 20%;
+	}
+	.row .ninecol {
+	width: 50%;
+	}
+	
+	input.signupinput {
+	font-size:12pt;
+	}
+	
+	.signup {
+	margin-left:10px;
+	}
+
+}
 
 
 /* Mobile */
 
 @media handheld, only screen and (max-width: 767px) {
-
-	body {
-	font-size: 0.3em;
-	-webkit-text-size-adjust: none;
-	}
-	
-	.row, body, .container {
-	width: 100%;
-	min-width: 0;
-	margin-left: 0px;
-	margin-right: 0px;
-	padding-left: 0px;
-	padding-right: 0px;
-	}
-	
-	.row .onecol, .row .twocol, .row .threecol, .row .fourcol, .row .fivecol, .row .sixcol, .row .sevencol, .row .eightcol, .row .ninecol, .row .tencol, .row .elevencol, .row .twelvecol {
-	width: auto;
-	float: none;
-	margin-left: 0px;
-	margin-right: 0px;
-	padding-left: 20px;
-	padding-right: 20px;
-	}
 
 }
